fix: font too small

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ body {
     border-radius: 2px;
     padding: 8px;
     margin-bottom: 4px;
-    font-size: 12px;
+    /* font-size: 12px; */
 }
 
 .window {
@@ -289,17 +289,14 @@ a:hover {
         display: none;
     }
 
-    body {
-        font-size: 20px;
-    }
-
     .wrap {
-        width: 95% !important;
+        width: 100% !important;
         padding: 0 10px;
         box-sizing: border-box;
     }
 
     .main {
+        font-size: 16px;
         width: 100% !important;
         float: none;
     }
